fixed z-index issue on big PRIVACY text

--- a/src/pages/About.module.css
+++ b/src/pages/About.module.css
@@ -7,4 +7,6 @@
     position: absolute;
     text-transform: uppercase;
     font-weight: 900;
+    pointer-events: none;
+    z-index: -1;
 }
